// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple block editor model 1`] = `
<div
  className="blockeditor"
>
  <div
    className="blockcontainer"
  >
    <div
      className="blockcontainer__paragraph"
    >
      Some text
    </div>
  </div>
  <div
    className="blockcontainer"
  >
    <div
      className="blockcontainer__document"
    >
      Constitution
       range 
      1,25
    </div>
  </div>
</div>
`;

exports[`With active 1`] = `
<div
  className="blockeditor"
>
  <div
    className="blockcontainer blockcontainer--active"
  >
    <div
      className="blockcontainer__paragraph"
    >
      Some text
    </div>
  </div>
  <div
    className="blockcontainer"
  >
    <div
      className="blockcontainer__document"
    >
      Constitution
       range 
      1,25
    </div>
  </div>
</div>
`;

exports[`With hover 1`] = `
<div
  className="blockeditor"
>
  <div
    className="blockcontainer blockcontainer--hover"
  >
    <div
      className="blockcontainer__paragraph"
    >
      Some text
    </div>
  </div>
  <div
    className="blockcontainer"
  >
    <div
      className="blockcontainer__document"
    >
      Constitution
       range 
      1,25
    </div>
  </div>
</div>
`;

exports[`With hover and active 1`] = `
<div
  className="blockeditor"
>
  <div
    className="blockcontainer blockcontainer--hover blockcontainer--active"
  >
    <div
      className="blockcontainer__paragraph"
    >
      Some text
    </div>
  </div>
  <div
    className="blockcontainer"
  >
    <div
      className="blockcontainer__document"
    >
      Constitution
       range 
      1,25
    </div>
  </div>
</div>
`;
